--- a/style.css
+++ b/style.css
@@ -1588,6 +1588,7 @@ form {
   position: relative;
   overflow: hidden;
 }
+/* LOGIN */
 #log {
   width: 100%;
   max-width: 420px;
@@ -1603,6 +1604,35 @@ form {
   justify-content: center;
   animation: fadeInScale 0.5s ease-out forwards;
   overflow: hidden;
+}
+.password-container {
+  position: relative;
+  width: 100%;
+  margin-bottom: 2%;
+}
+.password-container input {
+  width: 100%;
+  padding: 10px;
+  padding-right: 40px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: #2a2a2a;
+  border-radius: 8px;
+  color: #fff;
+  transition: 0.3s, box-shadow 0.3s ease;
+}
+.password-container .toggle-password {
+  display: none;
+  position: absolute;
+  top: 44%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: var(--siva);
+  font-size: 20px;
+  transition: 0.1s;
+}
+.password-container .toggle-password:hover {
+  color: var(--crvena);
 }
 .portal h2, #log h2 {
   margin: 15px 0 5px 0;
@@ -1671,7 +1701,7 @@ form {
 }
 .portal #btn4{
   width: auto;
-  font-size: 35px;
+  font-size: 34px;
   color: var(--siva);
   padding: 0;
   background: none;
@@ -1947,6 +1977,9 @@ form {
   .portal .gore{
     justify-content: center;
     border: 0;
+  }
+  .portal #btn4{
+    font-size: 26px;
   }
 }
 
