--- a/style.css
+++ b/style.css
@@ -1995,9 +1995,13 @@ form {
   .portal input,
   .portal button,
   #log input,
-  #log button{
+  #log button,
+  #languageBtn{
     font-size: 12px;
     padding: 6px 8px;
+  }
+  #ctgroup{
+    gap: 5px;
   }
   .portal a {
     font-size: 8px;
