--- a/style.css
+++ b/style.css
@@ -1660,6 +1660,13 @@ form {
   transition: opacity 0.5s ease-in-out;
   animation: fadeIn 0.3s ease-out forwards;
 }
+.obavestenje a {
+  color: var(--crvena);
+  text-decoration: underline;
+}
+.obavestenje a:hover {
+  color: var(--hover);
+}
 .obavestenje.hidden {
   opacity: 0;
 }
